Fixed overflow issue when window screen shrinks

--- a/FrontEnd/agme-app/src/components/CustomerProfile.css
+++ b/FrontEnd/agme-app/src/components/CustomerProfile.css
@@ -9,6 +9,7 @@
   url(https://visme.co/blog/wp-content/uploads/2017/07/50-Beautiful-and-Minimalist-Presentation-Backgrounds-036.jpg);
   background-position: center top;
   background-size:cover;
+  overflow: auto;
 }
 
 .profile {
