--- a/FrontEnd/agme-app/src/components/LandingPage.css
+++ b/FrontEnd/agme-app/src/components/LandingPage.css
@@ -1,8 +1,9 @@
-.img {
+.landing-img {
   width: 100%;
   height: 100vh;
   background-image: linear-gradient(to left, rgba(111, 209, 255, 0.171), rgba(113, 15, 138, 0.2)),
   url(https://visme.co/blog/wp-content/uploads/2017/07/50-Beautiful-and-Minimalist-Presentation-Backgrounds-036.jpg);
   background-position: center top;
   background-size:cover;
+  overflow: auto;
 }
