--- a/FrontEnd/agme-app/src/components/Login-signup.css
+++ b/FrontEnd/agme-app/src/components/Login-signup.css
@@ -19,6 +19,7 @@ body {
   url(https://visme.co/blog/wp-content/uploads/2017/07/50-Beautiful-and-Minimalist-Presentation-Backgrounds-036.jpg);
   background-position: center top;
   background-size: cover;
+  overflow: auto;
 }
 
 h3, label {
